src/test/resources/acceptance/reject/functionCallWithTypeAsId.ul
void bar ()
{
    int(id1, id2);
}
